2.30 - 'Enter 3+ letters', 'Enter' substitutes for click, hint timeout, restore correctly-placed labels, fix bug - 'Next' button not showing
git-svn-id: https://plugins.svn.wordpress.org/qwiz-online-quizzes-and-flashcards/trunk@1188436 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/qwiz.css
+++ b/qwiz.css
@@ -151,13 +151,6 @@ div.qwiz-usermenu div {
    border:              none;
 }
 
-.qwiz-login td.qwiz-remember {
-   position:            relative;
-   border:              none;
-   text-align:          center;
-   vertical-align:      top;
-}
-
 span.qwiz-remember {
    position:            relative;
    font-size:           80%;
