--- a/qwizcards.css
+++ b/qwizcards.css
@@ -114,13 +114,6 @@ div.qdeck-usermenu div {
    border:              none;
 }
 
-.qdeck-login td.qdeck-remember {
-   position:            relative;
-   border:              none;
-   text-align:          center;
-   vertical-align:      top;
-}
-
 span.qdeck-remember {
    position:            relative;
    font-size:           80%;
@@ -140,6 +133,7 @@ span.qdeck-remember input[type=checkbox] {
    visibility:          hidden;
    color:               red;
    font-weight:         bold;
+   text-align:          center;
 }
 
 
@@ -162,12 +156,17 @@ div.qcard_card {
    position:            relative;
 }
 
-.qcard_textentry {
+div.qcard_textentry {
    display:             inline-block;
    position:            relative;
    width:               240px;
    font-weight:         bold;
    color:               blue;
+}
+
+input.qcard_textentry {
+   width:               228px;
+   padding:             5px;
 }
 
 div.card_back_textentry {
@@ -209,7 +208,7 @@ input.qcard_textentry:-ms-input-placeholder {
 
 button.textentry_hint {
    position:            absolute;
-   right:               2px;
+   right:               0px;
    top:                 50%;
    transform:           translateY(-50%);
    font-size:           11px;
@@ -342,6 +341,17 @@ div.qcard_card button.cbutton {
 .clear {
    clear:               both;
 }
+
+div.focusable {
+   width:               5px;
+   height:              2px;
+   overflow:            hidden;
+}
+div.focusable input {
+   border:              0px;
+   background:          none;
+}
+
 // flipCard_v2.css.
 div.fc_card-container img{
         position: static !important;
